@@ -4,6 +4,8 @@ Distributed under the GPL v3
 
 <unreleased>
 
+- Yle-dl will now avoid re-downloading by default if a file already
+  exists. Use --no-resume to force re-downloading.
 - Handle various corner cases better in the title extraction
 - Include an unique ID in the output file name with --output-template '${program_id}'
 - More options for controlling the output verbosity: -qq, -q, -V, -VV
